# swc-helper-jsx-transform

./: Cargo.toml  README.md
.cargo/: config
src/: constant.rs  fragment.rs  lib.rs  text.rs  vnode.rs
src/attr/: key.rs  mod.rs  value.rs
src/element/: mod.rs  tag.rs
src/shared/: mod.rs
src/utils/: emit_code.rs  is.rs  mod.rs
tests/: transform.rs
tests/snapshots/: transform__AttrKey__attr.snap  transform__AttrKey__event_namespace.snap  transform__AttrKey__event_prefix.snap  transform__AttrKey__spread.snap  transform__AttrValue__const_undefined.snap  transform__AttrValue__element.snap  transform__AttrValue__empty.snap  transform__AttrValue__expr.snap  transform__AttrValue__fragment.snap  transform__AttrValue__fragment_container.snap  transform__AttrValue__lit.snap  transform__Element__is_static.snap  transform__Fragment__children.snap  transform__Tag__native_div.snap  transform__Text__clean_text.snap  transform__attr_boolean_attribute.snap  transform__attr_key_namespace_attr.snap  transform__attr_value_const_array.snap  transform__attr_value_const_obj.snap  transform__attr_value_element_container.snap  transform__element_is_static.snap  transform__fragment_with_children.snap  transform__tag_extra_component.snap  transform__tag_extra_custom.snap  transform__tag_extra_member.snap  transform__text_clean.snap
