[package]
name = "swc-helper-jsx-transform"
version = "0.1.2"
description = "SWC helper for jsx transform"
authors = ["westhide <mr.westhide@gmail.com>"]
repository = "https://github.com/westhide/swc-helper-jsx-transform.git"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
regex = "1.7.0"
once_cell = "1.16.0"
indexmap = { version = "1.9" }
swc_core = { version = "0.52", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_parser",
    "ecma_codegen",
] }

[dev-dependencies]
testing = "0.31.28"
insta = "1.26.0"
